# play-rules-img

./: .bazelrc  MODULE.bazel  README.md  go.mod  go.sum
.devcontainer/: devcontainer.json
cowsay/: BUILD
cowsay/cmd/hello/: BUILD  main.go
tools/lint/: BUILD
tools/oci/: BUILD
